--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 <body>
     <!-- #site_header -->
     <header id="site_header">
+        <div>
+            <img src="./src/img/logo.svg" alt="teambit logo">
+        </div>
+        <div>
+            <a href="#">Solutions</a>
+            <a href="#">Pricing</a>
+            <a href="#">Blog</a>
+            <a href="#">Sign In</a>
+            <button>Sign Up</button>
+        </div>
 
     </header>
     <!-- /#site_header -->
