--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Node Sass Teambit</title>
     <!-- SCSS -->
     <link rel="stylesheet" href="./dist/css/app.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
@@ -17,7 +19,7 @@
             <img src="./src/img/logo.svg" alt="teambit logo">
         </div>
         <div>
-            <a href="#">Solutions</a>
+            <a href="#">Solutions<i class="fa fa-chevron-down" aria-hidden="true"></i></a>
             <a href="#">Pricing</a>
             <a href="#">Blog</a>
             <a href="#">Sign In</a>
