Fix header, margins, links; add partials

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
             <a href="#">Pricing</a>
             <a href="#">Blog</a>
             <a href="#">Sign In</a>
-            <button>Sign Up</button>
+            <button>
+                <div class="google_logo">
+                    <img src="./dist/img/google-logo.svg" alt="google logo">
+                </div>
+                Sign Up
+            </button>
         </div>
 
     </header>
