Add jumbotron text, image

--- a/index.html
+++ b/index.html
@@ -36,7 +36,17 @@
 
     <!-- #site_main -->
     <main id="site_main">
+        <!-- .jumbotron -->
+        <div class="jumbotron">
 
+                <h2 class="jumbo_text">Lorem ipsum dolor sit.</h2>
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt facilis recusandae qui. Atque, nemo?</span>
+                <img class="jumbo_image" src="./src/img/illustration-main.jpg" alt="main illustration jumbotron">
+
+        
+            
+        </div>
+        <!-- /.jumbotron -->
     </main>
     <!-- /#site_main -->
 
