Add sign up buttons

--- a/index.html
+++ b/index.html
@@ -39,13 +39,16 @@
         <!-- .jumbotron -->
         <div class="jumbotron">
 
-                <h2 class="jumbo_text">Lorem ipsum dolor sit.</h2>
-                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt facilis recusandae qui. Atque, nemo?</span>
-                <img class="jumbo_image" src="./src/img/illustration-main.jpg" alt="main illustration jumbotron">
+            <h2 class="jumbo_text">Lorem ipsum dolor sit.</h2>
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt facilis recusandae qui. Atque,
+                nemo?</span>
 
-        
-            
+            <img class="jumbo_image" src="./src/img/illustration-main.jpg" alt="main illustration jumbotron">
+
         </div>
+        <br>
+
+        <button>sign up with google</button> or <button>sign up with slack</button>
         <!-- /.jumbotron -->
     </main>
     <!-- /#site_main -->
